fix: nav menu not closing on selection, divs not showing on safari

--- a/src/components/nav-menu/nav-menu.scss
+++ b/src/components/nav-menu/nav-menu.scss
@@ -6,8 +6,8 @@
   background-color: $color-white;
   margin: 4px 0;
   border-radius: 1px;
-  -webkit-transition: all 300ms cubic-bezier(0.215, 0.61, 0.355, 1);
-  transition: all 300ms cubic-bezier(0.215, 0.61, 0.355, 1);
+  -webkit-transition: all 1s cubic-bezier(0.215, 0.61, 0.355, 1) 3s;
+  transition: all 1s cubic-bezier(0.215, 0.61, 0.355, 1) 3s;
 }
 
 .nav-menu {
@@ -18,6 +18,7 @@
   bottom: 0;
   z-index: 99;
   display: none;
+  height: 0;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
@@ -25,6 +26,7 @@
   &--show {
     position: fixed;
     display: flex;
+    height: 100%;
   }
 
   .header-row {
@@ -70,11 +72,6 @@
   }
 
   .list-wrapper {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     .list {
       width: 100%;
       max-width: 50rem;
@@ -108,6 +105,7 @@
     margin-top: 20px;
     a {
       height: 40px;
+      width: 40px;
       margin: 0 20px;
       &:hover {
         @include lift-animation;
